Fix spacing of starter form and remove labels

--- a/src/main/content/_assets/css/downloads.scss
+++ b/src/main/content/_assets/css/downloads.scss
@@ -186,6 +186,19 @@ html, body {
         border-radius: 7px;
         min-width: 98px;
         min-height: 30px;
+        padding: 4px 4px;
+    }
+
+    #app_name_section {
+        margin-right: 94px;
+    }
+
+    #java_version_section {
+        margin-right: 56px;
+    }
+
+    #jakarta_version_section {
+        margin-right: 49px;
     }
 
     #app_name_section, #base_package_section {
@@ -195,7 +208,6 @@ html, body {
     #starter_submit {
         border-radius: 7px;
         padding: 12px 17px;
-        margin-left: 10px;
         color: #24253a;
         background-color: #ABD155;
         text-align: center;
